src/ui/Style.css
/* utility */

.hflex {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.vflex {
    display: flex;
    flex-direction: column;
}
.width0 {
    width: 0
}
.flex-grow {
    flex: 1 0 0;
}
.hscrollable {
    overflow-x: auto;
    /* fix scroll momentum on old Safari */
    -webkit-overflow-scrolling: touch;
}
.vscrollable {
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
}
.hscrollable > *,
.vscrollable > * {
    flex-shrink: 0;
}
.hide {
    display: none;
}

.vspace {
    height: 6pt;
}

/* common */

body {
    display: flex;
    flex-direction: column;
    font-family: sans-serif;

    line-height: 1.5;
    --line-height: 1.5em;

    background: var(--color-bg);
    color: var(--color-fg);
    accent-color: var(--color-fg-hl);
}

input {
    background: var(--color-bg);
    border-color: var(--color-fg);
    border: 1px solid var(--color-fg);
    border-radius: 2pt;
}

input:disabled {
    background: var(--color-bg-btn)
}

.small-input {
    width: 48pt;
}
.med-input {
    width: 80pt;
}

/* Buttons */

.label-button {
    white-space: nowrap;
}
.label-button input {
    display: none;
}

button,
select,
.label-button span {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 5pt 7pt;
    background: var(--color-bg-btn);
    border: 1px solid var(--color-fg);
    border-radius: 6pt;
    touch-action: manipulation;
}

button,
select,
.label-button,
.tab-group {
    margin: 1.5pt;
}

.tab-group label {
    margin: 0;
}

.tab-group label:not(:first-of-type) span {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.tab-group label:not(:last-of-type) span {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-right-width: 0;
}

.label-button span {
    flex: 1 0 0;
}

button:active,
select:active,
.label-button :active + span {
    background: var(--color-bg-btn-press);
}

.label-button :checked + span,
.show-checked {
    background: var(--color-fg-hl);
    color: var(--color-bg)
}

.label-button :checked:active + span,
.show-checked:active {
    background: var(--color-bg-hl);
    color: var(--color-fg)
}

.icon svg {
    width: var(--line-height);
    height: var(--line-height);
    fill: currentColor;
}

label {
    display: inline-flex;
    align-items: center;
}

.med-menu {
    width: 70pt;
}
.large-menu {
    width: 100pt;
}

.dialog {
    background: var(--color-bg);
    padding: 12pt;
    border-radius: 8pt;
    box-shadow: var(--color-fg) 0 0 60pt;
}

.dialog-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.2);

    display: flex;
    align-items: center;
    justify-content: center;
}

.message-dialog {
    max-width: 300pt;
}
.message-out {
    white-space: pre-wrap;
}

/* grid */

.properties-grid {
    display: grid;
    grid-template-columns: auto minmax(0, 1fr);
    align-items: center;
}

/* sequence edit */

.seq-button,
.seq-select {
    width: 30pt;
    margin-left: 0;
    margin-right: 0;
}
.seq-button span,
.seq-select {
    padding-left: 0;
    padding-right: 0;
}

.seq-select {
    appearance: none;
    text-align: center;
    text-align-last: center;
}

/* pattern table */

th, .pattern-cell {
    border: 1px solid var(--color-fg);
    white-space: nowrap;
    box-sizing: content-box;
}
table {
    border-collapse: collapse;
    table-layout: fixed;
    width: 0;
}
table,
.pattern-cell {
    font-family: monospace;
}
/* https://issues.chromium.org/issues/40511425 */
th {
    position: sticky;
    position: -webkit-sticky;
    background-color: var(--color-bg);
    z-index: 1;
}
thead th {
    top: 0;
}
tbody th {
    left: 0;
}
tbody tr:nth-child(4n+1),
tbody tr:nth-child(4n+1) th {
    background: var(--color-bg-btn);
}
tbody tr:nth-child(16n+1),
tbody tr:nth-child(16n+1) th {
    background: var(--color-bg-btn-press);
}
.sel-cell {
    background: var(--color-bg-hl);
}
.sel-pitch .cell-pitch,
.sel-inst .cell-inst,
.sel-effect .cell-effect {
    background: var(--color-fg-hl);
    color: var(--color-bg);
}
td,
tr,
.cell-pitch,
.cell-effect,
.cell-inst {
    /* Layout performance optimization */
    height: var(--line-height);
    overflow: hidden;
    contain: strict;
}
td,
.pattern-col-head {
    width: 10ch;
}
.cell-pitch,
.cell-effect,
.cell-inst {
    display: inline-block;
    vertical-align: top;
    box-sizing: content-box;
}
.cell-pitch, .cell-effect {
    width: 3ch;
}
.cell-inst, .pattern-row-head {
    width: 2ch;
}
.hilite-row {
    background: var(--color-bg-alt) !important;
}

.hselect {
    display: table-row;
}

.hselect option {
    display: table-cell;
}

.pattern-table-space {
    height: 50%;
}

/* cell entry */

.keypad-key {
    width: 24pt;
    touch-action: none;
    flex-shrink: 0;
    margin: 0;
}
.keypad-half-key {
    width: 12pt;
    flex-shrink: 0;
}
.keypad-key span {
    padding-left: 0;
    padding-right: 0;
}

.black-key :not(:checked) + span {
    background: var(--color-fg);
    color: var(--color-bg);
    border-color: var(--color-bg);
}

/* wave editor */

.wave-edit {
    padding: 0 8pt;
    touch-action: none;
}

.wave-container {
    position: relative;
}

.wave-mark,
.wave-mark:before,
.wave-range {
    position: absolute;
    height: 100%;
}
.wave-mark:before,
.wave-range {
    pointer-events: none;
}
.wave-mark:before {
    content: "";
    padding: 0 1px;
    margin: 0 -1px;
    background-color: inherit;
}
.wave-range {
    opacity: 0.2;
}

.wave-select {
    background: var(--color-fg-hl);
}
.wave-loop {
    background: var(--color-fg-alt);
}

